--- a/Client/Pages/EventEdit.razor
+++ b/Client/Pages/EventEdit.razor
@@ -88,7 +88,7 @@ else
 
 @code {
     [Parameter]
-    public string Id { get; set; }
+    public string Id { get; set; } = default!;
 
     private BirdWatching.Shared.Model.Event Event = new();
     private bool isLoading = true;
